--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "bd5676bff2aebfd112c3816c9d9a5720"
-application_url = "https://garcia-gtk-detect-commissioners.trycloudflare.com"
+application_url = "https://spectacular-emphasis-spaces-arrangement.trycloudflare.com"
 embedded = true
 name = "wishlist-inspire"
 handle = "wishlist-inspire-318"
@@ -23,9 +23,9 @@ scopes = "write_products"
 
 [auth]
 redirect_urls = [
-  "https://garcia-gtk-detect-commissioners.trycloudflare.com/auth/callback",
-  "https://garcia-gtk-detect-commissioners.trycloudflare.com/auth/shopify/callback",
-  "https://garcia-gtk-detect-commissioners.trycloudflare.com/api/auth/callback"
+  "https://spectacular-emphasis-spaces-arrangement.trycloudflare.com/auth/callback",
+  "https://spectacular-emphasis-spaces-arrangement.trycloudflare.com/auth/shopify/callback",
+  "https://spectacular-emphasis-spaces-arrangement.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
@@ -34,3 +34,4 @@ embedded = false
 [build]
 dev_store_url = "asl-dev-store.myshopify.com"
 automatically_update_urls_on_dev = true
+include_config_on_deploy = true
