--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "isbot": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.1.5",
+    "remix-utils": "^8.1.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
