--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@remix-run/serve": "^2.7.1",
     "@shopify/app-bridge-react": "^4.1.6",
     "@shopify/polaris": "^12.0.0",
+    "@shopify/polaris-icons": "^9.3.0",
     "@shopify/shopify-app-remix": "^3.4.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.1",
     "date-fns": "^4.1.0",
